# SHOOT

./: .gitignore  README.md  README_MOBILE.md  buildozer.spec  main.py  pyproject.toml
.github/workflows/: build-apk.yml
src/: __main__.py  config.py  data_manager.py  engine.py  game.py  mobile_input.py
src/audio/: __init__.py  sound_manager.py
src/core/: __init__.py  art.py  game_state.py  resource_manager.py  shield_utils.py
src/menus/: __init__.py  gameover.py  leaderboard.py  level.py  manager.py  pause.py  settings.py  start.py  upgrade.py
src/objects/: __init__.py  background.py  boss.py  common.py  enemies.py  player.py  skill.py
