[project]
name = "shoot"
version = "1.3.1"
description = "太空射击游戏 - 基于 Pygame"
authors = [{ name = "Developer" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pygame>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
